Fix input method not working on popup widgets

BUG: 395598