libs/widgetutils/KisPopupButton.cpp
@@ -84,6 +84,7 @@ void KisPopupButton::showPopupWidget()
     if (m_d->popupWidget && !m_d->frame->isVisible()) {
         m_d->frame->raise();
         m_d->frame->show();
+        m_d->frame->activateWindow();
         adjustPosition();
     }
     else {
